--- a/index2.html
+++ b/index2.html
@@ -261,10 +261,15 @@
             border-top: 1px solid rgba(0, 0, 0, 0.25);
             padding-top: 0.5em;
         }
+        body {
+            margin: 0;
+        }
     </style>
 </head>
 
 <body>
+{%include nav_index2.html%}
+
     <!-- init the list -->
     {% assign headers = "" | split: ',' %}
 
