--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,25 @@ body {
 				  <polygon points="142.994,142.995 83.148,142.995 83.148,157.995 157.994,157.995 157.994,43.883 142.994,43.883 		"/>
 				</g>
 			  </svg>
-			  <small class="mt-1" style="color: #9B5DE5;">{{ post.date | date: '%B %d, %Y' }}</small>
+			  <small class="mt-1" style="color: #9B5DE5;">
+				{% assign m = page.date | date: "%-m" %}
+				{{ page.date | date: "%-d" }}
+		  {% case m %}
+			{% when '1' %}Janeiro
+			{% when '2' %}Fevereiro
+			{% when '3' %}Março
+			{% when '4' %}Abril
+			{% when '5' %}Maio
+			{% when '6' %}Junho
+			{% when '7' %}Julho
+			{% when '8' %}Agosto
+			{% when '9' %}Setembro
+			{% when '10' %}Outubro
+			{% when '11' %}Novembro
+			{% when '12' %}Dezembro
+		  {% endcase %}
+		  {{ page.date | date: "%Y" }}
+			  </small>
 			</div>
 		  </div>
 		</div>
