changes to layout

--- a/index.html
+++ b/index.html
@@ -264,6 +264,17 @@
         body {
             margin: 0;
         }
+
+        .titulo {
+  bottom: 0;
+  right: 0;
+  padding: 0 4% 4% 0;
+  position: absolute;
+  font-size: 2em;
+  font-weight: bold;
+  color: grey;
+  z-index: 99;
+  }
     </style>
 </head>
 
@@ -289,5 +300,10 @@
         <div class="slideshow-image" style="background-image: url('{{ random-header[2] }}')"></div>
         <div class="slideshow-image" style="background-image: url('{{ random-header[3] }}')"></div>
     </div>
+
+
+    <section class="titulo">
+        TRILHOS
+      </section>
 
 </body>
