--- a/index.html
+++ b/index.html
@@ -272,8 +272,12 @@
   position: absolute;
   font-size: 2em;
   font-weight: bold;
-  color: grey;
-  z-index: 99;
+  color: rgb(64,64,64);
+  }
+        h1 span { 
+  background-color: rgba(255, 255, 255, 0.75); 
+  padding: 0 0.5em 0;
+  border-radius: 10px;
   }
     </style>
 </head>
@@ -302,8 +306,8 @@
     </div>
 
 
-    <section class="titulo">
-        TRILHOS
-      </section>
+    <section class="titulo"><h1><span>
+  TRILHOS</span></h1>
+</section>
 
 </body>
