almost done with the cards

--- a/blog.html
+++ b/blog.html
@@ -5,13 +5,14 @@
 layout:
 ---
 
-<!DOCTYPE html>
+{%include head.html %}
 
 
 
 <head>
 
     <link rel="stylesheet" href="/css/blog.css">
+	
 
 
 
@@ -23,7 +24,7 @@ layout:
 <body>
 
 
-{%include navegacao.html%}
+
 
 <h1>Trilhos</h1>
 <ul class="cards">
